--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,127 @@
               >
             </div>
             <div class="header__box">
-              <a class="basket" href="#"></a>
-              <a class="header__btn header__btn-login" href="#">Login</a>
-              <a class="header__btn header__btn-register" href="#">Register</a>
+              <div class="notification__box">
+                  <a class="notification header__circle active icon-bell-o " href="#">
+                    <span>8</span>
+                  </a>
+                  <div class="circle__menu notification__menu">
+                    <div class="circle__item icon-bell-o icons-color">
+                      <img class="circle__img" src="img/content/message-person-1.jpg" alt="photo">
+                    <div class="circle__info">
+                      <div class="circle__about">Need WP Help!</div>
+                      <div class="circle__date">01 Dec, 2016</div>                      
+                    </div>
+                  </div>
+                  <div class="circle__item icon-bell-o ">
+                      <img class="circle__img" src="img/content/message-person-2.jpg" alt="photo">
+                    <div class="circle__info">
+                      <div class="circle__about">Need WP Help!</div>
+                      <div class="circle__date">26 Nov, 2016</div>
+                    </div>
+                  </div>
+                  <div class="circle__item icon-bell-o ">
+                      <img class="circle__img " src="img/content/message-person-3.jpg" alt="photo">
+                    <div class="circle__info">
+                      <div class="circle__about">Psd Template Help!</div>
+                      <div class="circle__date">26 Nov, 2016</div>
+                    </div>
+                  </div>
+              </div>
+                  </div>
+                </div>
+                  <div class="message__box">
+                  <a class="message header__circle active icon-envelope-o " href="#">
+                    <span>5</span>
+                  </a>
+                  <div class="circle__menu message__menu">
+                    <div class="circle__item icon-envelope-o icons-color">
+                          <img class="circle__img" src="img/content/message-person-1.jpg" alt="photo">
+                        <div class="circle__info">
+                          <div class="circle__name">Kazi Fahim</div>
+                          <div class="circle__about">Need WP Help!</div>
+                          <div class="circle__date">01 Dec, 2016</div>                          
+                        </div>                        
+                      </div>
+                      <div class="circle__item  icon-envelope-o ">
+                          <img class="circle__img" src="img/content/message-person-2.jpg" alt="photo">
+                        <div class="circle__info">
+                          <div class="circle__name">Richi Lenal</div>
+                          <div class="circle__about">Need WP Help!</div>
+                          <div class="circle__date">26 Nov, 2016</div>
+                        </div>
+                        </div>
+                      <div class="circle__item  icon-mail-reply ">
+                          <img class="circle__img" src="img/content/message-person-3.jpg" alt="photo">
+                        <div class="circle__info">
+                          <div class="circle__name">PsdBosS</div>
+                          <div class="circle__about">Psd Template Help!</div>
+                          <div class="circle__date">26 Nov, 2016</div>
+                        </div>
+                      </div>
+                  </div>
+                </div> 
+                  <div class="basket__box"> 
+                    <a class="basket header__circle active icon-shopping-cart" href="#">
+                      <span>8</span>
+                    </a>
+                    <div class="circle__menu">
+                      <div class="circle__item">
+                          <img class="circle__image" src="img/content/basket-item-1.jpg" alt="photo">
+                        <div class="circle__info">
+                          <div class="circle__name">Grand Ballet</div>
+                          <div class="circle__about">WordPress</div>
+                          <div class="circle__price">$59</div>
+                        </div>
+                      </div>
+                      <div class="circle__item">
+                      <img class="circle__image" src="img/content/basket-item-2.jpg" alt="photo">
+                      <div class="circle__info">
+                        <div class="circle__name">Apple Device</div>
+                        <div class="circle__about">WordPress</div>
+                        <div class="circle__price">$59</div>
+                      </div>
+                    </div>
+                    <div class="basket__amount">
+                      <div class="basket__title">
+                        <div class="basket__amount-total">Total</div>
+                        <div class="basket__amount-price">$118</div>
+                      </div>
+                      <a class="basket__btn" href="#">Go to Cart</a>
+                      <a class="basket__btn basket__btn-Checkout" href="#">Go to Checkout</a>
+                    </div>
+                  </div>              
+                    </div>
+                  <div class="user__box">
+                  <a class="user" href="#">
+                    <div class="user__inner">
+                    <div class="user__img"> <img src="img/content/logo-men.jpg" alt="photo"></div>
+                    <div class="user__info">
+                      <div class="user__name">
+                        Mike Hussy
+                      </div>
+                      <div class="user__total">
+                         $171.00
+                      </div>
+                    </div>
+                  </div>
+                  </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a class="angle-right" href="#">Profile Page</a></li>
+                      <li><a class="angle-right" href="#">Portfolio</a></li>
+                      <li><a class="angle-right" href="#">Account Setting</a></li>
+                      <li><a class="angle-right" href="#">Downloads</a></li>
+                      <li><a class="angle-right" href="#">Wishlist</a></li>
+                      <li><a class="angle-right" href="#">Upload Item</a></li>
+                      <li><a class="angle-right" href="#">Statement</a></li>
+                      <li><a class="angle-right" href="#">Withdraws</a></li>
+                    </ul>
+                  </div>  
+                </div>   
+                  <a class="header__btn header__btn-login--off" href="#">Login</a>
+                  <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
+                  <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
             </div>
           </div>
         </div>
@@ -864,7 +982,7 @@
                 <span>(05)</span>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
