--- a/app/new-items.html
+++ b/app/new-items.html
@@ -37,7 +37,10 @@
                   >
                 </div>
                 <div class="header__box">
-                  <a class="basket" href="#"></a>
+                  <a class="notification header__circle icon-bell-o" href="#"></a>
+                  <a class="message header__circle icon-envelope-o" href="#"></a>
+                  <a class="basket header__circle icon-shopping-cart" href="#"></a>
+                  <a class="user" href="#"></a>
                   <a class="header__btn header__btn-login" href="#">Login</a>
                   <a class="header__btn header__btn-register" href="#"
                     >Register</a
